refactor: Заменен фильтр branchId на branchIds в GetTasksRequestDto
- Убран branchId из taskListFilterColumnSchema
- Добавлен branchIds в taskListFilterColumnSchema для фильтрации по нескольким филиалам
- Обновлена логика фильтрации: branchIds принимает UUID, разделенные запятой
- Обновлено описание фильтра в Swagger документации
- Добавлены тесты для фильтра branchIds
