# service2110/docs/swagger/service2110.json
@@ -819,7 +819,7 @@
                   "type": "string",
                   "enum": [
                     "packageId",
-                    "branchId",
+                    "branchIds",
                     "branchName",
                     "status",
                     "reportType",
@@ -2665,7 +2665,7 @@
         "tags": [
           "Report 6406 - Tasks"
         ],
-        "description": "Тело запроса: pagination (number, size), sorting (direction, column), filter (опционально). Ответ: items, totalItems. Фильтр по пакету: column=packageId, value=<packageId> — задания в указанном пакете; column=packageId, value=null — задания без пакета.",
+        "description": "Тело запроса: pagination (number, size), sorting (direction, column), filter (опционально). Ответ: items, totalItems. Фильтр по пакету: column=packageId, value=<packageId> — задания в указанном пакете; column=packageId, value=null — задания без пакета. Фильтр по филиалам: column=branchIds, value=<uuid1,uuid2,uuid3> — задания, связанные с указанными филиалами (UUID разделены запятой).",
         "requestBody": {
           "content": {
             "application/json": {
